# MnistNN

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
front-end/: index.css  index.html  numberBot.js  paint.js  tfNumberBot.js  tfjs-vis.umd.min.js  tfjs@3.7.0.js
front-end/mnist_tf_keras_js_model/: model.json
front-end/wasm/: neural_net.js  neural_net.wasm
front-end/wasm/headers/: NeuralNet.h  mnistParser.h  statpack.h
front-end/wasm/params/: nn1_biases1.txt  nn1_biases2.txt  nn1_biases3.txt  nn1_weights1.txt  nn1_weights2.txt  nn1_weights3.txt
front-end/wasm/src/: mnistParser.cpp  nn.cpp  nn2.cpp  statpack.cpp
mnistLib/: CMakeLists.txt
mnistLib/headers/: NeuralNet.h  mnistNN.h  mnistParser.h  statpack.h
mnistLib/src/: mnistParser.cpp  statpack.cpp
mnistLib/src/mnistNN/: test_combined.cpp  test_v1.cpp  test_v2.cpp  train_combined.cpp  train_v1.cpp  train_v2.cpp
mnistNN/: CMakeLists.txt
mnistNN/headers/: mnistNN.h  mnistParser.h  statpack.h
mnistNN/src/: mnistParser.cpp  statpack.cpp  test_combined.cpp  test_v1.cpp  test_v2.cpp  train_v1.cpp
results/784_10_10_p0.93_v1/: biases1.txt  biases2.txt  biases3.txt  learnrate.txt  readme.md  weights1.txt  weights2.txt  weights3.txt
results/784_10_40_p0.95_c/: README.md  nn1_biases1.txt  nn1_biases2.txt  nn1_biases3.txt  nn1_weights1.txt  nn1_weights2.txt  nn1_weights3.txt  nn2_biases1.txt  nn2_biases2.txt  nn2_biases3.txt  nn2_weights1.txt  nn2_weights2.txt  nn2_weights3.txt
results/784_20_10_p0.84_v2/: biases1.txt  biases2.txt  biases3.txt  learnrate.txt  readme.md  weights1.txt  weights2.txt  weights3.txt
